--- a/GUI/PurchaseOrderManagement/CreatePurchaseOrderGUI.form
+++ b/GUI/PurchaseOrderManagement/CreatePurchaseOrderGUI.form
@@ -1,41 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.PurchaseOrderManagement.CreatePurchaseOrderGUI">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="5" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="549" height="400"/>
+      <xy x="20" y="20" width="454" height="189"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="600" height="300"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="4a244" class="javax.swing.JLabel" binding="lblSearch">
+      <component id="9d213" class="javax.swing.JLabel" binding="lblSearch">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Search for a Vendor:"/>
+          <text value="Search for Vendor:"/>
         </properties>
       </component>
-      <component id="18f88" class="javax.swing.JTextField" binding="txtSearchBar">
+      <component id="5e819" class="javax.swing.JButton" binding="btnCreatePO">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+          <hideActionText value="false"/>
+          <label value="Create Purchase Order"/>
+          <text value="Create Purchase Order"/>
+          <visible value="true"/>
+        </properties>
+      </component>
+      <component id="c762" class="javax.swing.JButton" binding="btnCancelPO">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+          <label value="Cancel Purchase Order"/>
+          <text value="Cancel Purchase Order"/>
+          <visible value="true"/>
+        </properties>
+      </component>
+      <component id="4b294" class="javax.swing.JTextField" binding="txtSearchBar">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
+          <editable value="true"/>
+          <enabled value="true"/>
           <text value=""/>
           <toolTipText value="Search for a Vendor to create a Purchaser Order"/>
         </properties>
       </component>
-      <component id="c438" class="javax.swing.JButton" binding="btnGo">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Select Vendor"/>
-        </properties>
-      </component>
-      <component id="5b7c0" class="javax.swing.JButton" binding="btnLogOut">
+      <component id="7fa0b" class="javax.swing.JButton" binding="btnLogOut">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -43,7 +62,7 @@
           <text value="Log Out"/>
         </properties>
       </component>
-      <component id="8b503" class="javax.swing.JButton" binding="btnMainMenu">
+      <component id="92703" class="javax.swing.JButton" binding="btnMainMenu">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -51,29 +70,45 @@
           <text value="Main Menu"/>
         </properties>
       </component>
-      <component id="483a6" class="javax.swing.JList" binding="lstItems">
+      <grid id="a0a04" binding="pnlFormatDisplay" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="4" col-span="2" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="12384" class="javax.swing.JButton" default-binding="true">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="4" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Cancel Purchase Order "/>
+          <background color="-1118482"/>
         </properties>
-      </component>
-      <component id="b6939" class="javax.swing.JButton" binding="createPurchaseOrderButton" default-binding="true">
+        <border type="none"/>
+        <children>
+          <scrollpane id="61304" binding="scpDisplayList">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="4bb5" class="javax.swing.JList" binding="lstItems">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
+          <component id="1765d" class="javax.swing.JLabel" binding="lblListInfo">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <component id="9629b" class="javax.swing.JButton" binding="btnSelectVendor">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <label value="Create Purchase Order"/>
-          <text value="Create Purchase Order"/>
+          <text value="Select Vendor"/>
         </properties>
       </component>
     </children>
