--- a/GUI/PurchaseOrderManagement/PurchaseOrderGUI.form
+++ b/GUI/PurchaseOrderManagement/PurchaseOrderGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.PurchaseOrderManagement.PurchaseOrderGUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="450" height="189"/>
     </constraints>
     <properties>
       <background color="-1118482"/>
@@ -12,20 +12,9 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="c187c" class="javax.swing.JTextField" binding="txtInstructions">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <editable value="true"/>
-          <enabled value="false"/>
-        </properties>
-      </component>
       <component id="2fcd0" class="javax.swing.JButton" binding="btnLogOut">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Log Out"/>
@@ -36,29 +25,20 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Search for a Vendor:"/>
+          <text value="Search for Vendor:"/>
         </properties>
       </component>
       <component id="a4aa0" class="javax.swing.JButton" binding="btnMainMenu">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Main Menu"/>
         </properties>
       </component>
-      <component id="4b20" class="javax.swing.JButton" binding="btnCreatePO">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <label value="Create Purchase Order"/>
-          <text value="Create Purchase Order"/>
-        </properties>
-      </component>
       <component id="ad76e" class="javax.swing.JButton" binding="btnViewPO">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <label value="View Purchase Orders"/>
@@ -78,39 +58,58 @@
           <toolTipText value="Search for a Vendor to create a Purchaser Order"/>
         </properties>
       </component>
-      <component id="c5b5c" class="javax.swing.JButton" binding="btnCancelPO">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <enabled value="false"/>
-          <text value="Cancel Purchase Order "/>
-          <visible value="false"/>
-        </properties>
-      </component>
-      <scrollpane id="139f8" binding="scpDisplayList">
-        <constraints>
-          <grid row="2" column="1" row-span="5" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="ced69" class="javax.swing.JList" binding="lstItems">
-            <constraints/>
-            <properties>
-              <enabled value="true"/>
-              <selectionBackground color="-11833681"/>
-              <selectionMode value="0"/>
-            </properties>
-          </component>
-        </children>
-      </scrollpane>
       <component id="12ac5" class="javax.swing.JButton" binding="btnSelectVendor">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Select Vendor"/>
+        </properties>
+      </component>
+      <grid id="55096" binding="pnlFormatDisplay" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="1" row-span="4" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1118482"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <scrollpane id="139f8" binding="scpDisplayList">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="ced69" class="javax.swing.JList" binding="lstPurchaseOrders">
+                <constraints/>
+                <properties>
+                  <enabled value="true"/>
+                  <selectionBackground color="-11833681"/>
+                  <selectionMode value="0"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+          <component id="47552" class="javax.swing.JLabel" binding="lblListInfo">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <component id="4b20" class="javax.swing.JButton" binding="btnStartPO">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <label value="Start Purchase Order"/>
+          <text value="Start Purchase Order"/>
         </properties>
       </component>
     </children>
